<resources>
    <string name="app_name">PiControl</string>
    <string name="action_settings">Settings</string>

    <string name="defaultIP">0.0.0.0</string>
    <string name="spIPKey">spIPKey</string>
    <string name="spIPValidity">spIPValidity</string>
    <integer name="IPValidity">600000</integer>
    <string name="getIPURL">http://harrydev.altervista.org/Tesi/getIP.php</string>


    <integer name="noOfMatches">10</integer>
    <string name="SpeakString">Inserisci un Comando.</string>
    <string name="SpeakCommandNotFoundError">Comando non Riconosciuto.</string>
    <string name="RecognizerLanguage">it-IT</string>
    <string name="NoRecognizerActivityLink">https://play.google.com/store/apps/details?id=com.google.android.googlequicksearchbox</string>
    <string name="errorNoCommand">Aggiungere Add On per Generare Comandi.</string>

    <integer name="PortNumber">8888</integer>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_password_second">Reinserisci la Password</string>
    <string name="prompt_surname">Cognome</string>

    <string name="register"><u>Non sei ancora registrato?</u></string>
    <string name="autologin">Accedi Automaticamente.</string>
    <string name="title_activity_login">PiControl</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email non Valida.</string>
    <string name="error_email_used">Email già Registrata.</string>
    <string name="error_invalid_password">Password troppo Corta.</string>
    <string name="error_incorrect_password">Le Password non Corrispondono.</string>
    <string name="error_field_required">Riempire tutti i Campi.</string>

    <string name="title_activity_register">Registrazione PiControl</string>

    <string name="server_error">Errore Server.\nRiprovare più tardi.</string>
    <string name="registration_success">Registrazione Avvenuta con Successo.</string>

    <string name="login_email_error">Utente Non Registrato.</string>
    <string name="login_password_error">Password Errata.</string>

    <string name="spKeyLoginEmail">LOGIN_EMAIL</string>
    <string name="spKeyLoginPassword">LOGIN_PASSWORD</string>
    <string name="spKeyAutoLogin">AUTO_LOGIN</string>


    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="drawerSettings">Impostazioni</string>
    <string name="drawerLogout">Logout</string>
    <string name="drawerAddPi">Aggiungi Raspberry</string>
    <string name="title_activity_add_pi">Aggiungi un Raspberry Pi</string>
    <string name="text_no_raspberry">Aggiungere un Raspberry Pi</string>

    <string name="text_addPi_1">Esegui il primo avvio di PiControl su Raspberry Pi\ntramite il seguente comando:\n\n\"sudo java -jar PiControl.jar LOGIN_KEY\"\n\nLa tua LOGIN_KEY:</string>
    <string name="text_addPi_2">Una volta avviato il Jar clicca sul pulsante di conferma per l\'accoppiamento dei dispositivi.</string>
    <string name="addPi_Error">Errore nella connessione col Raspberry.\nRiprovare.</string>
    <string name="prompt_piName">Nome Raspberry</string>
    <string name="add_pi_success">Raspberry Accoppiato con Successo.</string>

    <string name="empty_room">Non ci sono Stanze Settate nel Raspberry Pi.</string>
    <string name="title_activity_add_room">Aggiungi Stanza</string>
    <string name="textAddRoom">Aggiungi una stanza da controllare con il tuo Raspberry Pi.</string>
    <string name="prompt_RoomName">Nome Stanza</string>
    <string name="roomNamePresent">Nome Stanza già Inserito</string>
    <string name="noNameRoom">Aggiungere un nome alla stanza per proseguire.</string>
    <string name="roomAdded">Stanza aggiunta con successo.</string>
    <string name="addRoomError">Problemi di comunicazione col Server.\nRiprovare</string>
    <string name="raspberryPkg">com.hpdev</string>
    <string name="textRaspberryOffline">Il tuo Raspberry Pi è Offline.</string>

    <string name="textSelectRoomType">Seleziona il tipo di Stanza</string>
    <string name="textErrorSelectRoomType">Seleziona un tipo di Stanza</string>

    <string-array name="roomTypeName">
        <item>Stanza</item>
        <item>Soggiorno</item>
        <item>Stanza da Letto</item>
        <item>Cucina</item>
        <item>Piscina</item>
        <item>Giardino</item>
    </string-array>
    <string name="title_activity_view_room">Stanza</string>
    <string name="title_activity_add_user">Aggiungi Add On</string>
    <string name="prompt_addUserName">Nome Add On</string>
    <string name="textAddUser">Aggiungi Funzionalità al tuo Raspberry Pi.</string>
    <string name="textUserType">Add On Disponibili</string>


    <string name="noUserName">Aggiungere un nome all\'Add On per Proseguire.</string>
    <string name="UserAdded">Add On aggiunto con successo.</string>
    <string name="userNamePresent">Nome Add On già in uso per questa stanza.</string>
    <string name="errorSelectUserType">Selezionare un tipo di Add On.</string>

    <string name="addOnAdded">Add On aggiunto con successo.</string>


    <string-array name="userTypeName">
        <item>Relay</item>
        <item>DHT11</item>
    </string-array>

    <string name="ttsDHT11_First">C\'è una temperatura di </string>
    <string name="ttsDHT11_Second">gradi ed un\'umidità relativa del </string>

    <string name="text_Room_User">Gli Add On inseriti:</string>
    <string name="sensor_error">Errore con l\'Add On. Controllarne il funzionamento.</string>
    <string name="title_activity_view_user">ViewUserActivity</string>
    <string name="errorPiDown">Errore di connessione.</string>
    <string name="errorOffline">Lo Smartphone è Offline.</string>
    <string name="text_user_command">Il tuo comando deve contenere le seguenti parole per essere riconosciuto:</string>
    <string name="text_pin_used">I Pin GPIO da usare:</string>
    <string name="text_no_user">Non ci sono Add On inseriti</string>

    <string-array name="command_array_relay">
        <item>Accendi</item>
        <item>Spegni</item>
        <item>Accendi Normalmente Chiuso</item>
        <item>Spegni Normalmente Chiuso</item>
    </string-array>

    <string-array name="command_array_dht11">
        <item>Temperatura</item>
        <item>Umidità</item>
        <item>Caldo</item>
    </string-array>

</resources>
