<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputEmail"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputPass"
            android:layout_below="@id/inputEmail">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:text="@string/autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputPass"
            android:layout_centerHorizontal="true"
            android:textColor="@color/secondary_text"
            android:buttonTint="@color/colorAccent"
            android:id="@+id/autologin"
            android:layout_margin="16dp"
            android:checked="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register"
            android:textAlignment="center"
            android:layout_below="@id/autologin"

            android:id="@+id/registerButton" />




    </RelativeLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/loginButton"
        android:layout_width="@dimen/fab_Dimension"
        android:layout_height="@dimen/fab_Dimension"
        android:layout_gravity="center|bottom"
        android:layout_margin="16dp"

        android:src="@drawable/ic_key" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_app_big"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/icon_margin"
        android:id="@+id/imageView" />


</android.support.design.widget.CoordinatorLayout>
