<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="@dimen/toolbar"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">


        <TextView
            android:id="@+id/tvAddRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/textAddRoom"
            android:textColor="@color/primary_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputaddRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddRoom"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/addRoomName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_RoomName"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvRoomType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputaddRoomName"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/textSelectRoomType"
            android:textColor="@color/primary_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerTypeRoom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvRoomType"
            android:scrollbars="vertical" />

    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/doneAddRoom"
        android:layout_width="@dimen/fab_Dimension"
        android:layout_height="@dimen/fab_Dimension"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_done" />

</android.support.design.widget.CoordinatorLayout>
