<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hpdev.picontrol.AddUserActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="@dimen/toolbar"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">


        <TextView
            android:id="@+id/tvAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/textAddUser"
            android:textColor="@color/primary_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputaddUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAddUser"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/addUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_addUserName"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputaddUserName"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/textUserType"
            android:textColor="@color/primary_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerTypeUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvUserType"
            android:scrollbars="vertical" />

    </RelativeLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDoneAddOn"
        android:layout_width="@dimen/fab_Dimension"
        android:layout_height="@dimen/fab_Dimension"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_done" />

</android.support.design.widget.CoordinatorLayout>
